welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:13: error: not found: type YELLOW
setCouleurBrosse(c:YELLOW)
                   ^FlowerPot:13: error: not found: value c
setCouleurBrosse(c:YELLOW)
                 ^FlowerPot:16: error: not found: value growFlower
growFlower(Color.CYAN) 
^